samples/_failures_safe/1761705096_961e88_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3d60422.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f3d60422.c:180:5: error: expected expression at end of input
  180 |     for (int i = 0; i < graph->vertices;
      |     ^~~
./samples/SAFE/__tmp_f3d60422.c:180:5: error: expected declaration or statement at end of input
